--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do CheckList</title>
     
-    <link rel="stylesheet" href=".\main.css">
+    <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
     <div id="daily-tasks">
@@ -148,7 +148,7 @@
             </form>
         </div>
     </div>
-    <script type="module" src="./src/index.js"></script>
+    <script type="module" src="static/js/index.js"></script>
 </body>
 </html>
 
