need to fix close button

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -96,6 +96,9 @@ body {
 
 
 
-
-
-
+/* .close-addTaskModal {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+} */
