--- a/template/index.html
+++ b/template/index.html
@@ -12,6 +12,10 @@
     <div id="daily-tasks">
     <strong><div id="clock" class="clock"></div></strong>
         <h2>Daily Tasks Checklist</h2>
+        <label for="taskStatus"> Status: </label>
+        <span class="color-point" style="background-color: red;"></span> Doing
+        <span> &nbsp; &nbsp; &nbsp </span>
+        <span class="color-point" style="background-color: green;"></span> Done
         <ul id="tasks-list"></ul>
         <button id="add-task-btn">Add New Task</button>
     </div>
@@ -47,20 +51,3 @@
     <script type="module" src="static/js/index.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
